--- a/root/styles/mobile/template/overall_footer.html
+++ b/root/styles/mobile/template/overall_footer.html
@@ -1,7 +1,7 @@
 </div>
 <div id="footer">
-	<!-- Support iWebKit by sending us traffic; please keep this footer on your page, consider it a thank you for our work :-) -->
-	Powered by <a class="noeffect" href="http://www.iwebkit.net/" target="_blank">iWebKit</a> and <a class="noeffect" href="http://www.phpbb.com/" target="_blank">phpBB</a>
+	Powered by <a class="noeffect" href="http://www.iwebkit.net/" target="_blank">iWebKit</a> and <a class="noeffect" href="http://www.phpbb.com/" target="_blank">phpBB</a><br />
+	<a href="{U_DESKTOP}">{L_MOBILE_DESKTOP}</a>
 </div>
 
 </body>
